// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UXCaptureExpect destinationVerified renders correct markup when \`destinationVerified\` is an empty array 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect destinationVerified renders correct markup when \`destinationVerified\` is null 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect destinationVerified renders correct markup when \`destinationVerified\` is undefined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect destinationVerified renders correct markup when \`destinationVerified\` not supplied 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect does not render markup when no zones are defined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": undefined,
    }
  }
/>
`;

exports[`UXCaptureExpect primaryActionAvailable renders correct markup when \`primaryActionAvailable\` is an empty array 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryActionAvailable renders correct markup when \`primaryActionAvailable\` is null 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryActionAvailable renders correct markup when \`primaryActionAvailable\` is undefined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryActionAvailable renders correct markup when \`primaryActionAvailable\` not supplied 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryContentDisplayed renders correct markup when \`primaryContentDisplayed\` is an empty array 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryContentDisplayed renders correct markup when \`primaryContentDisplayed\` is null 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryContentDisplayed renders correct markup when \`primaryContentDisplayed\` is undefined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect primaryContentDisplayed renders correct markup when \`primaryContentDisplayed\` not supplied 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect renders correct markup when all props are defined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]},{\\"label\\":\\"ux-secondary-content-displayed\\",\\"marks\\":[\\"ux-secondary-content-1\\",\\"ux-secondary-content-2\\",\\"ux-secondary-content-3\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect secondaryContentDisplay renders correct markup when \`secondaryContentDisplayed\` is an empty array 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect secondaryContentDisplay renders correct markup when \`secondaryContentDisplayed\` is null 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect secondaryContentDisplay renders correct markup when \`secondaryContentDisplayed\` is undefined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureExpect secondaryContentDisplay renders correct markup when \`secondaryContentDisplayed\` not supplied 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UX) {
				window.UX.expect([{\\"label\\":\\"ux-primary-content-displayed\\",\\"marks\\":[\\"ux-primary-content-1\\",\\"ux-primary-content-2\\"]},{\\"label\\":\\"ux-primary-action-available\\",\\"marks\\":[\\"ux-primary-action-available\\"]}]);
			}
		</script>
	",
    }
  }
/>
`;
